# xPU-simulator

./: .gitignore  README.md  deepseek_v3.2_910b_trace.json  deepseek_v3.2_dsa_report.html  deepseek_v3.2_h100_trace.json  deepseek_v3.2_tp2_report.html  deepseek_v32_671b_dispatch_report.html  deepseek_v3_dispatch_report.html  pyproject.toml
benchmarks/: run_all_extractors.py  run_benchmark.py  run_msmodeling_comparison.py  run_real_models.py  run_vs_msmodeling.py
docker/: Dockerfile  README.md  run.sh
docs/: system_design.md
examples/: deepseek_v3_2.py  deepseek_v3_dispatch.py  msmodeling_comparison.py
reports/: all_extractors_benchmark.csv  benchmark_results.csv  ca_pipe_analysis.json  deepseek_v3.2_910c_trace.json  deepseek_v3.2_a100_trace.json  deepseek_v3.2_report.html  deepseek_v3_671b_dispatch_report.html  msmodeling_full_comparison.csv  npu_calibration_results.csv  npu_profiling_results.csv  npu_profiling_results_calibrated.csv  qwen3_0.6b_stress.csv  real_model_benchmark.csv  vs_msmodeling.csv
scripts/: ca_sim_cube_mini.py  ca_sim_profiling.py  gpu_profiling_colab.ipynb  gpu_profiling_colab.py  npu_kernel_benchmark.py  qwen_stress.py  validate_against_ca_sim.py
tests/: test_config_extractor.py  test_decode.py  test_dispatch_extractor.py  test_dispatch_fusion.py  test_efficiency.py  test_extractors.py  test_fusion.py  test_npu_ca_model.py  test_parallelism.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_profiling_db.py  test_quantization.py  test_serving.py  test_visualization.py
xpu_simulator/: __init__.py  (+1 more)
(+58 files in other folders)
